--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,8 @@
 			<main class="content">
 				<section class="box">
 					<div class='container'>
-						<div class="box__row slider">
+						<div class="box__row">
+							<div class="arrow prev"></div>
 							<div class="box__column">
 								<a href="#" class="box__item item-box item-box_1">
 									<div class="item-box__image">
@@ -214,6 +215,7 @@
 									<div class="item-box__shadow"></div>
 								</a>
 							</div>
+							<div class="arrow next"></div>
 						</div>
 					</div>
 				</section>
